# sql_mermaid_visualizer

./: Cargo.toml  LICENSE  README.md
examples/: big.sql  simple.sql
src/: main.rs
